# DynamicAgentClient

./: README.md  __init__.py  pyproject.toml
examples/: message_compact.py  message_list.py  one_operator.py  test_messages.py
src/: __init__.py  agent_operator_base.py  client.py  service_handler.py  structs.py
src/dynamic_agent_client/: __init__.py  client.py  service_handler.py  session_client_structs.py
src/dynamic_agent_client/operator/: OPERATOR.md  agent_operator_base.py
src/operator/: OPERATOR.md  agent_operator_base.py
