[project]
name = "dynamic-agent-client"
version = "0.1.0"
description = "WebSocket + HTTP client library for consuming the dynamic agent service"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "websockets>=12.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]